# asset-allocation-jobs

./: .codedrift.yml  .dockerignore  .env.template  .gitignore  AGENTS.md  CODE_DRIFT_SENTINEL_COMPLETE.md  CONTRIBUTING.md  DATA.md  DEPLOYMENT_SETUP.md  Dockerfile  README.md  SECURITY.md  docker-compose.debug.yml  docker-compose.yml  docker-refresh.sh  pyproject.toml  pytest.ini  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
.claude/: settings.local.json
.codex/gateway/: ledger.md
.github/: CODEOWNERS  dependabot.yml
.github/agents/: actionmedic.agent.md  application-project-analyst-technical-explainer.agent.md  architecture-review-agent.agent.md  business-partner-agent.agent.md  cleanup-change-debris-auditor.agent.md  cloud-cost-optimization-efficiency-architect.agent.md  cloud-security-vulnerability-expert.agent.md  code-drift-sentinel.agent.md  code-humanizer.agent.md  (+17 more)
alpaca/: config.py  models.py  price_cache.py  reconciler.py  state.py  trading_rest.py  transport_http.py  transport_ws.py
alpha_vantage/: __init__.py  client.py  config.py  errors.py  rate_limiter.py  utils.py
core/: alpha_vantage_gateway_client.py  api_gateway_auth.py  backtest_artifacts.py  backtest_repository.py  backtest_runtime.py  bronze_bucketing.py  control_plane_transport.py  core.py  debug_symbols.py  domain_artifacts.py  domain_metadata_snapshots.py  finance_contracts.py  gold_column_lookup_catalog.py  gold_sync_contracts.py  layer_bucketing.py  logging_config.py  market_history_contract.py  massive_gateway_client.py  pipeline.py  portfolio_contracts.py  portfolio_materialization.py  portfolio_repository.py  postgres.py  purge_rules.py  ranking_repository.py  regime.py  regime_repository.py  results_repository.py  run_manifests.py  runtime_config.py  strategy_repository.py  symbol_availability.py  symbol_cleanup_runtime.py  universe_repository.py
deploy/: app_api.yaml  app_api_public.yaml  cost_guardrails.bicep  cost_guardrails.json  cost_guardrails.parameters.example.json  job_backtests.yaml  job_backtests_reconcile.yaml  job_bronze_earnings_data.yaml  job_bronze_economic_catalyst_data.yaml  job_bronze_finance_data.yaml  job_bronze_market_data.yaml  job_bronze_price_target_data.yaml  job_bronze_quiver.yaml  job_bronze_quiver_backfill.yaml  job_bronze_quiver_data.yaml  job_gold_earnings_data.yaml  job_gold_economic_catalyst_data.yaml  job_gold_finance_data.yaml  job_gold_market_data.yaml  job_gold_price_target_data.yaml  job_gold_quiver_data.yaml  job_gold_regime_data.yaml  job_intraday_market_refresh.yaml  job_intraday_monitor.yaml  job_platinum_rankings.yaml  job_results_reconcile.yaml  job_silver_earnings_data.yaml  job_silver_economic_catalyst_data.yaml  job_silver_finance_data.yaml  job_silver_market_data.yaml  job_silver_price_target_data.yaml  job_silver_quiver_data.yaml  job_symbol_cleanup.yaml
docs/: strategy-configuration-audit.md  strategy-exploration-release-signoff.md  system-status-freshness.md
massive_provider/: __init__.py  client.py  config.py  errors.py  flat_files.py  utils.py  websocket.py
monitoring/: __init__.py  arm_client.py  azure_blob_store.py  control_plane.py  delta_log.py  domain_metadata.py  lineage.py  log_analytics.py  monitor_metrics.py  resource_health.py  system_health.py  ttl_cache.py
scripts/: add_federated_credential.ps1  apply_postgres_migrations.ps1  audit_containerapp_wake_sources.ps1  check_ui_api_drift_guards.py  cleanup_old_workflows.ps1  configure_cost_guardrails.ps1  delete_all_jobs.ps1  delete_gold_tables.ps1  dependency_governance.py  deploy_containerapp_job.sh  ensure_job_start_rbac.ps1  fetch_job_logs.py  profile_backtest_runtime.py  provision_azure.ps1  provision_azure_interactive.ps1  provision_azure_postgres.ps1  provision_entra_oidc.ps1  purge_storage_containers.ps1  refresh_shared_dependencies_with_codex.ps1  remediate_delta_index_artifacts.py  reset_postgres.py  reset_postgres_from_scratch.ps1  run_api_dev.py  run_quality_gate.py  setup-env.ps1  show_adls_usage_breakdown.ps1  show_latest_job_logs.ps1  stop_dev_by_port.py  sync-all-to-github.ps1  sync_github_copilot_agents.py  sync_gold_column_lookup.py  validate_acr_pull.ps1  validate_azure_permissions.ps1  validate_deploy_inputs.py  verify_ui_api_health.py
tasks/: results_reconcile.py
tests/: __init__.py  conftest.py  manual_lock_test.py  test_azure_provisioning_scripts.py  test_config_debug_symbols.py  test_debug_symbols.py  test_delta_core.py  test_deploy_managed_identity_env.py  test_deploy_workflow_filters.py  test_diagnostics.py  test_env_contract.py  test_github_copilot_agents.py  test_multirepo_dependency_contract.py  test_postgres_migrations.py  test_release_image_resolver.py  test_runtime_common_patch_targets.py  test_runtime_config.py  test_storage_client.py  test_symbol_universe.py  test_workflow_runtime_ownership.py  test_workflow_scripts.py
(+369 files in other folders)
