[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation-jobs"
version = "0.1.0"
description = "Asset Allocation jobs runtime, provider adapters, and batch orchestration."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas==3.0.2",
    "numpy==2.4.4",
    "colorama==0.4.6",
    "pyarrow==23.0.1",
    "nasdaq-data-link==1.0.4",
    "filelock==3.25.2",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "deltalake==1.5.0",
    "python-dotenv==1.2.2",
    "python-dateutil==2.9.0.post0",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "sqlalchemy==2.0.49",
    "websockets==16.0",
    "PyJWT==2.12.1",
    "cryptography==46.0.7",
    "pydantic-settings==2.13.1",
    "PyYAML==6.0.3",
    "pydantic==2.12.5",
    "asset-allocation-contracts==0.1.0",
    "asset-allocation-runtime-common==0.1.0",
]

[project.optional-dependencies]
massive-ws = [
    "massive",
]
massive-flatfiles = [
    "boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "alpaca*",
    "alpha_vantage*",
    "core*",
    "massive_provider*",
    "monitoring*",
    "tasks*",
]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = [
    "ui",
    "tmp",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
